prevent username from overflowing

--- a/client/src/styles/ProjectColumn.css
+++ b/client/src/styles/ProjectColumn.css
@@ -128,6 +128,11 @@
   color: white;
   border-bottom: solid #384857 0.2rem;
 }
+.user-port .main {
+  display: inline-block;
+  width: 10rem;
+  overflow-x: hidden;
+}
 
 .user-menu {
   float: right;
